# ycf

./: .tmuxinator.yml  .todo  Cargo.toml  LICENSE  README.md  install-syntax-highlighting.sh  test.neoconf  test.ycf  test2.ycf  todo
neoconf-syntax-highlighting/: language-configuration.json  package.json  tREADME.md  vsc-extension-quickstart.md
neoconf-syntax-highlighting/syntaxes/: neoconf.tmLanguage.json
src/: constants.rs  lexer.rs  lib.rs  main.rs  parser.rs  preprocessor.rs  test.rs  tokens.rs
syntax-highlighting/: CHANGELOG.md  README.md  package.json
syntax-highlighting/syntaxes/: neoconf.tmLanguage.json
