[package]
name = "ycf"
version = "0.2.0"
edition = "2021"
description = "Yet another configuration file"
authors = ["abdalrzag eisa <bmjfdrh@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Senpai-10/ycf"
repository = "https://github.com/Senpai-10/ycf"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
